added variables for new header background

--- a/src/pages/games/factorio.astro
+++ b/src/pages/games/factorio.astro
@@ -12,7 +12,14 @@ import image1 from "@assets/games/factorio/picture1.jpg";
 import image2 from "@assets/games/factorio/picture2.png";
 ---
 
-<!-- "https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all" -->
+<style>
+  :root {
+    --header-image-hue: 175deg;
+    --header-image-brightness: 0.4;
+    --header-image-saturation: 5;
+  }
+</style>
+
 <Layout
   title="Gummientchen - Factorio"
   description="Join Gummientchen on a gaming odyssey like no other. From dominating battlefields to unraveling epic quests, Gummientchen explores pixel realms, leaving no virtual stone unturned."
