--- a/src/pages/games/seaofthieves.astro
+++ b/src/pages/games/seaofthieves.astro
@@ -12,6 +12,15 @@ import image1 from "@assets/games/seaofthieves/picture1.jpg";
 import image2 from "@assets/games/seaofthieves/picture2.jpg";
 ---
 
+<style>
+  :root {
+    --header-position-hue: 30%;
+    --header-image-hue: 320deg;
+    --header-image-brightness: 0.3;
+    --header-image-saturation: 3;
+  }
+</style>
+
 <Layout
   title="Gummientchen - Sea of Thieves"
   description="Join Gummientchen on a gaming odyssey like no other. From dominating battlefields to unraveling epic quests, Gummientchen explores pixel realms, leaving no virtual stone unturned."
