--- a/src/pages/games/valorant.astro
+++ b/src/pages/games/valorant.astro
@@ -12,7 +12,14 @@ import image1 from "@assets/games/valorant/picture1.jpg";
 import image2 from "@assets/games/valorant/picture2.jpg";
 ---
 
-<!-- "https://tracker.gg/valorant/profile/riot/GummientchenCH%231337/overview?playlist=unrated&season=all" -->
+<style>
+  :root {
+    --header-image-hue: 100deg;
+    --header-image-brightness: 0.4;
+    --header-image-saturation: 3;
+  }
+</style>
+
 <Layout
   title="Gummientchen - Valorant"
   description="Join Gummientchen on a gaming odyssey like no other. From dominating battlefields to unraveling epic quests, Gummientchen explores pixel realms, leaving no virtual stone unturned."
