--- a/src/pages/games/fs22.astro
+++ b/src/pages/games/fs22.astro
@@ -12,6 +12,15 @@ import image1 from "@assets/games/fs22/picture1.png";
 import image2 from "@assets/games/fs22/picture2.png";
 ---
 
+<style>
+  :root {
+    --header-position-hue: 30%;
+    --header-image-hue: -20deg;
+    --header-image-brightness: 0.6;
+    --header-image-saturation: 1.25;
+  }
+</style>
+
 <Layout
   title="Gummientchen - Farming Simulator 22"
   description="Join Gummientchen on a gaming odyssey like no other. From dominating battlefields to unraveling epic quests, Gummientchen explores pixel realms, leaving no virtual stone unturned."
