--- a/src/pages/hyped/starfield.astro
+++ b/src/pages/hyped/starfield.astro
@@ -13,6 +13,15 @@ import image2 from "@assets/hyped/starfield/scmlzk.jpg";
 import image3 from "@assets/hyped/starfield/schdmk.jpg";
 ---
 
+<style>
+  :root {
+    --header-position-hue: 0%;
+    --header-image-hue: 40deg;
+    --header-image-brightness: 0.8;
+    --header-image-saturation: 2;
+  }
+</style>
+
 <Layout
   title="Gummientchen - Starfield"
   description="Join Gummientchen on a gaming odyssey like no other. From dominating battlefields to unraveling epic quests, Gummientchen explores pixel realms, leaving no virtual stone unturned."
