--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -68,6 +68,68 @@ import Card from "@components/Card.astro";
     />
   </SectionGrid>
 
+  <SectionGrid title="Games">
+    <Card
+      service="CSGO"
+      description="Bomb has been planted"
+      svg="csgo"
+      buttonhref="games/csgo"
+      buttonsuffix="More Info"
+    />
+    <Card
+      service="Factorio"
+      description="The Factory Must Grow!"
+      svg="factorio"
+      buttonhref="games/factorio"
+      buttonsuffix="More Info"
+    />
+    <Card
+      service="Farming Simulator 22"
+      description="Pepperidge Farm Remembers"
+      svg="fs22_2"
+      buttonhref="games/fs22"
+      buttonsuffix="More Info"
+    />
+    <Card
+      service="Rocket League"
+      description="Calculated"
+      svg="rocketleague_2"
+      buttonhref="games/rocketleague"
+      buttonsuffix="More Info"
+    />
+    <Card
+      service="Sea of Thieves"
+      description="You want bannana?"
+      svg="seaofthieves"
+      buttonhref="games/seaofthieves"
+      buttonsuffix="More Info"
+    />
+    <Card
+      service="Skyrim"
+      description="Fus Ro Dah!"
+      svg="skyrim"
+      buttonhref="games/skyrim"
+      buttonsuffix="More Info"
+    />
+    <Card
+      service="Valorant"
+      description="Pew Pew Pew"
+      svg="valorant"
+      buttonhref="games/valorant"
+      buttonsuffix="More Info"
+    />
+  </SectionGrid>
+
+  <SectionGrid title="Hype">
+    <Card
+      service="Starfield"
+      description="Where's my Sandwich?!"
+      svg="starfield"
+      buttonhref="hyped/starfield"
+      buttonsuffix="More Info"
+    />
+  </SectionGrid>
+
   <SectionGrid title="Social">
     <Card
       service="YouTube"
@@ -96,75 +158,6 @@ import Card from "@components/Card.astro";
       description="A happy little printer"
       svg="printables"
       buttonhref="https://www.printables.com/social/11871-gummientchen/about"
-    />
-  </SectionGrid>
-
-  <SectionGrid title="Games">
-    <Card
-      service="CSGO"
-      description="Bomb has been planted"
-      svg="csgo"
-      buttonhref="games/csgo"
-      buttonsuffix="More Info"
-    />
-    <Card
-      service="Factorio"
-      description="The Factory Must Grow!"
-      svg="factorio"
-      buttonhref="games/factorio"
-      buttonsuffix="More Info"
-    />
-    <Card
-      service="Farming Simulator 22"
-      description="Pepperidge Farm Remembers"
-      svg="fs22_2"
-      buttonhref="games/fs22"
-      buttonsuffix="More Info"
-    />
-    <Card
-      service="Modern Warfare II"
-      description="Steamin’ Jesus"
-      svg="codmw2"
-      buttonhref="https://store.steampowered.com/app/1938090/Call_of_Duty_Modern_Warfare_II/"
-      buttonsuffix="Steam Page"
-    />
-    <Card
-      service="Rocket League"
-      description="Calculated"
-      svg="rocketleague_2"
-      buttonhref="games/rocketleague"
-      buttonsuffix="More Info"
-    />
-    <Card
-      service="Sea of Thieves"
-      description="You want bannana?"
-      svg="seaofthieves"
-      buttonhref="games/seaofthieves"
-      buttonsuffix="More Info"
-    />
-    <Card
-      service="Skyrim"
-      description="Fus Ro Dah!"
-      svg="skyrim"
-      buttonhref="https://store.steampowered.com/app/489830/The_Elder_Scrolls_V_Skyrim_Special_Edition/"
-      buttonsuffix="Steam Page"
-    />
-    <Card
-      service="Valorant"
-      description="Pew Pew Pew"
-      svg="valorant"
-      buttonhref="games/valorant"
-      buttonsuffix="More Info"
-    />
-  </SectionGrid>
-
-  <SectionGrid title="Hype">
-    <Card
-      service="Starfield"
-      description="Where's my Sandwich?!"
-      svg="starfield"
-      buttonhref="hyped/starfield"
-      buttonsuffix="More Info"
     />
   </SectionGrid>
 
