added Kerbal Space Program

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -118,6 +118,13 @@ import Card from "@components/Card.astro";
       buttonhref="games/valorant"
       buttonsuffix="More Info"
     />
+    <Card
+      service="Kerbal Space Program"
+      description="Jeb: This is Fine!"
+      svg="ksp"
+      buttonhref="games/ksp"
+      buttonsuffix="More Info"
+    />
   </SectionGrid>
 
   <SectionGrid title="Hype">
