removed Nintendo and GOG

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,13 +20,13 @@ import Card from "@components/Card.astro";
       svg="steam"
       buttonhref="http://steamcommunity.com/id/Gummientchen/"
     />
-    <Card
+    <!-- <Card
       service="GOG.com"
       gamertag="Gummientchen_"
       description="The Defensive Regulatory Magicon must be destroyed!"
       svg="gog"
       buttonhref="https://www.gog.com/u/Gummientchen_"
-    />
+    /> -->
     <Card
       service="Xbox Live"
       gamertag="Gummientchen"
@@ -46,12 +46,12 @@ import Card from "@components/Card.astro";
       description="These games are never finished! ;)"
       svg="uplay"
     />
-    <Card
+    <!-- <Card
       service="Nintendo"
       gamertag="Gummientchen_ch"
       description="0619 - 8903 - 4604"
       svg="nintendo"
-    />
+    /> -->
     <Card
       service="Battle.net"
       gamertag="Gummientchen#21348"
