added playwright tests for index

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,6 +7,8 @@
   identification purposes only. Use of these names, logos, and brands does not
   imply endorsement.<br /><br />
   Clouds in Background from <a
+    target="_blank"
+    rel="noopener"
     href="https://www.freepik.com/free-vector/cartoon-white-clouds-icon-set-isolated-blue_14805788.htm#query=cloud%20svg&position=9&from_view=keyword&track=ais"
     >Image by svstudioart</a
   > on Freepik
