replaced csgo with cs2

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,11 +69,18 @@ import Card from "@components/Card.astro";
   </SectionGrid>
 
   <SectionGrid title="Games">
-    <Card
+    <!-- <Card
       service="CSGO"
       description="Bomb has been planted"
       svg="csgo"
       buttonhref="games/csgo"
+      buttonsuffix="More Info"
+    /> -->
+    <Card
+      service="CS2"
+      description="Bomb has been planted"
+      svg="cs2"
+      buttonhref="games/cs2"
       buttonsuffix="More Info"
     />
     <Card
@@ -86,7 +93,7 @@ import Card from "@components/Card.astro";
     <Card
       service="Farming Simulator 22"
       description="Pepperidge Farm Remembers"
-      svg="fs22_2"
+      svg="fs22"
       buttonhref="games/fs22"
       buttonsuffix="More Info"
     />
@@ -127,7 +134,7 @@ import Card from "@components/Card.astro";
     />
   </SectionGrid>
 
-  <SectionGrid title="Hype">
+  <!-- <SectionGrid title="Hype">
     <Card
       service="Starfield"
       description="Where's my Sandwich?!"
@@ -135,7 +142,7 @@ import Card from "@components/Card.astro";
       buttonhref="hyped/starfield"
       buttonsuffix="More Info"
     />
-  </SectionGrid>
+  </SectionGrid> -->
 
   <SectionGrid title="Social">
     <Card
@@ -152,13 +159,13 @@ import Card from "@components/Card.astro";
       svg="twitch"
       buttonhref="https://www.twitch.tv/gummientchen"
     />
-    <Card
+    <!-- <Card
       service="Twitter"
       gamertag="Gummientchen_"
       description="#Hashtag"
       svg="twitter"
       buttonhref="https://twitter.com/Gummientchen_"
-    />
+    /> -->
     <Card
       service="Printables"
       gamertag="Gummientchen"
