changed font family to system-ui and increased font size

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -59,6 +59,7 @@ const { default: arrow } = await import("../images/arrow-right.svg?raw");
     border-radius: 2px;
     overflow: hidden;
     position: relative;
+    font-size: 1.25rem;
   }
   .card p {
     letter-spacing: 0.45px;
