--- a/src/components/Table.astro
+++ b/src/components/Table.astro
@@ -57,6 +57,7 @@ const { default: arrow } = await import("../images/arrow-right.svg?raw");
 
   table {
     width: 100%;
+    font-size: 1.25rem;
   }
 
   @media (min-width: 66rem) {
