--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,7 +29,7 @@ html,
 body {
   margin: 0;
   font-size: 16px;
-  font-family: "Roboto", "Source Sans Pro", Arial, sans-serif;
+  font-family: system-ui, sans-serif;
   background-color: var(--main-bg-color);
 }
 .container {
