--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -201,7 +201,9 @@ import Card from "@components/Card.astro";
     <TableRow component="Power Supply">
       Seasonic - Prime Platinum 1300W
     </TableRow>
-    <TableRow component="Main Display">BenQ - 34" Ultrawide EX3415R</TableRow>
+    <TableRow component="Main Display">
+      Dell Alienware - 34" Ultrawide AW3423DWF
+    </TableRow>
     <TableRow component="Secondary Displays">
       Samsung - LS34J550WQUXEN<br />
       DELL - U2722D
