New Game: Overwatch 2
Added the game Overwatch 2 to the website

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -130,6 +130,13 @@ import Card from "@components/Card.astro";
       description="Jeb: This is Fine!"
       svg="ksp"
       buttonhref="games/ksp"
+      buttonsuffix="Info"
+    />
+    <Card
+      service="Overwatch 2"
+      description="Who needs aim anyway?"
+      svg="overwatch2"
+      buttonhref="games/overwatch2"
       buttonsuffix="More Info"
     />
   </SectionGrid>
