--- a/src/pages/games/cs2.astro
+++ b/src/pages/games/cs2.astro
@@ -64,36 +64,84 @@ import image2 from "@assets/games/cs2/picture2.jpg";
     </TableRow>
   </Table>
   <Description>
-    <p>Counter-Strike 2 is the long-awaited sequel to one of the most popular and influential first-person shooters of all time. Built on the Source 2 engine, CS2 brings the classic gameplay of Counter-Strike to a new generation, with stunning visuals, improved performance, and new features that make it the most competitive and exciting Counter-Strike experience yet.</p>
+    <p>
+      Counter-Strike 2 is the long-awaited sequel to one of the most popular and
+      influential first-person shooters of all time. Built on the Source 2
+      engine, CS2 brings the classic gameplay of Counter-Strike to a new
+      generation, with stunning visuals, improved performance, and new features
+      that make it the most competitive and exciting Counter-Strike experience
+      yet.
+    </p>
 
-    <p>Source 2 is a powerful new engine that allows Valve to create more realistic and immersive worlds than ever before. In CS2, this means that you'll experience everything from the dust kicked up by your footsteps to the smoke billowing from a grenade explosion with incredible realism.</p>
+    <p>
+      Source 2 is a powerful new engine that allows Valve to create more
+      realistic and immersive worlds than ever before. In CS2, this means that
+      you'll experience everything from the dust kicked up by your footsteps to
+      the smoke billowing from a grenade explosion with incredible realism.
+    </p>
 
     <DescriptionPicture
-          src={image1}
-          alt="Five players lined up, ready to battle. Valve©"
-        />
+      src={image1}
+      alt="Five players lined up, ready to battle. Valve©"
+    />
 
-    <p>CS2 also introduces a number of new features that make the game more competitive and exciting. For example, there's a new ranking system that more accurately reflects your skill level, as well as a new tickless server architecture that reduces lag and makes the game more responsive.</p>
+    <p>
+      CS2 also introduces a number of new features that make the game more
+      competitive and exciting. For example, there's a new ranking system that
+      more accurately reflects your skill level, as well as a new tickless
+      server architecture that reduces lag and makes the game more responsive.
+    </p>
 
-    <p>At its core, CS2 is still the same classic Counter-Strike experience that fans have come to love. You'll still play as either a Counter-Terrorist or Terrorist, and you'll still be tasked with completing different objectives depending on the game mode. But with its new features and improved performance, CS2 is the best way to experience Counter-Strike yet.</p>
+    <p>
+      At its core, CS2 is still the same classic Counter-Strike experience that
+      fans have come to love. You'll still play as either a Counter-Terrorist or
+      Terrorist, and you'll still be tasked with completing different objectives
+      depending on the game mode. But with its new features and improved
+      performance, CS2 is the best way to experience Counter-Strike yet.
+    </p>
 
     <DescriptionPicture
-          src={image2}
-          alt="Image of a player engaged in a combat situation on the 'Inferno' map. The player is positioned in the 'Banana' area, using barrels as cover while shooting at an opponent. Valve©"
-        />
+      src={image2}
+      alt="Image of a player engaged in a combat situation on the 'Inferno' map. The player is positioned in the 'Banana' area, using barrels as cover while shooting at an opponent. Valve©"
+    />
 
-    <p>The Source 2 engine is a major upgrade over the original Source engine that was used to develop Counter-Strike: Global Offensive. It features a number of new features and improvements, including:</p>
-  
+    <p>
+      The Source 2 engine is a major upgrade over the original Source engine
+      that was used to develop Counter-Strike: Global Offensive. It features a
+      number of new features and improvements, including:
+    </p>
+
     <ul>
-      <li>Volumetric effects: This allows for more realistic smoke, fog, and other effects.</li>
-      <li>New ranking system: The new ranking system is more accurate and reflects your skill level more precisely. This helps to ensure that you are matched against opponents of a similar skill level, which makes for more competitive and enjoyable matches.</li>
-      <li>New tickless server architecture: The new tickless server architecture reduces lag and makes the game more responsive. This is especially important in online matches, where even a small amount of lag can make the difference between winning and losing.</li>
-      <li>New game modes: CS2 will introduce a number of new game modes, including a new competitive mode that is designed to be even more challenging and rewarding than the existing competitive mode in CS:GO.</li>
+      <li>
+        Volumetric effects: This allows for more realistic smoke, fog, and other
+        effects.
+      </li>
+      <li>
+        New ranking system: The new ranking system is more accurate and reflects
+        your skill level more precisely. This helps to ensure that you are
+        matched against opponents of a similar skill level, which makes for more
+        competitive and enjoyable matches.
+      </li>
+      <li>
+        New tickless server architecture: The new tickless server architecture
+        reduces lag and makes the game more responsive. This is especially
+        important in online matches, where even a small amount of lag can make
+        the difference between winning and losing.
+      </li>
+      <li>
+        New game modes: CS2 will introduce a number of new game modes, including
+        a new competitive mode that is designed to be even more challenging and
+        rewarding than the existing competitive mode in CS:GO.
+      </li>
     </ul>
 
-    <p>At its core, CS2 is still the same classic Counter-Strike experience that fans have come to love. You'll still play as either a Counter-Terrorist or Terrorist, and you'll still be tasked with completing different objectives depending on the game mode. However, the new features in CS2 make it the best way to experience Counter-Strike yet.
+    <p>
+      At its core, CS2 is still the same classic Counter-Strike experience that
+      fans have come to love. You'll still play as either a Counter-Terrorist or
+      Terrorist, and you'll still be tasked with completing different objectives
+      depending on the game mode. However, the new features in CS2 make it the
+      best way to experience Counter-Strike yet.
     </p>
-    
   </Description>
   <Table title="Information about the Game">
     <TableRow component="Developer">Valve</TableRow>
@@ -112,6 +160,13 @@ import image2 from "@assets/games/cs2/picture2.jpg";
         linktext="Counter-Strike 2"
         linkhref="https://store.steampowered.com/app/730/CounterStrike_2/"
         iconname="steam"
+      />
+    </TableRow>
+    <TableRow component="Leetify Profile">
+      <PlatformLink
+        linktext="Leetify: Gummientchen"
+        linkhref="https://leetify.com/public/profile/76561197987542343"
+        iconname=""
       />
     </TableRow>
   </Table>
