--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "@layouts/Layout.astro";
-import SectionGrid from "@components/SectionGrid.astro";
-import Table from "@components/Table.astro";
-import TableRow from "@components/TableRow.astro";
-import Card from "@components/Card.astro";
+import Layout from '@layouts/Layout.astro';
+import SectionGrid from '@components/SectionGrid.astro';
+import Table from '@components/Table.astro';
+import TableRow from '@components/TableRow.astro';
+import Card from '@components/Card.astro';
 ---
 
 <Layout
@@ -137,6 +137,13 @@ import Card from "@components/Card.astro";
       description="Who needs aim anyway?"
       svg="overwatch2"
       buttonhref="games/overwatch2"
+      buttonsuffix="More Info"
+    />
+    <Card
+      service="Helldivers 2"
+      description="For Super Earth!"
+      svg="helldivers2"
+      buttonhref="games/helldivers2"
       buttonsuffix="More Info"
     />
   </SectionGrid>
