--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -145,6 +145,7 @@ import Card from '@components/Card.astro';
       svg="helldivers2"
       buttonhref="games/helldivers2"
       buttonsuffix="More Info"
+      svgbackground="#2b2b2b"
     />
   </SectionGrid>
 
