Created sony-playstation icon

--- a/src/components/PlatformLink.astro
+++ b/src/components/PlatformLink.astro
@@ -38,6 +38,17 @@ if (!linktext) {
 }
 
 {
+  iconname == "playstation" && (
+    <>
+      <a href={linkhref} target="_blank" rel="noopener">
+        {linktext}
+      </a>
+      <Icon name="sony-playstation" />
+    </>
+  )
+}
+
+{
   iconname == "riot" && (
     <>
       <a href={linkhref} target="_blank" rel="noopener">
