--- a/src/pages/games/helldivers2.astro
+++ b/src/pages/games/helldivers2.astro
@@ -1,15 +1,16 @@
 ---
-import Layout from '@layouts/Layout.astro';
-import HeroImage from '@components/HeroImage.astro';
-import Description from '@components/Description.astro';
-import Table from '@components/Table.astro';
-import TableRow from '@components/TableRow.astro';
-import PlatformLink from '@components/PlatformLink.astro';
+import Layout from "@layouts/Layout.astro";
+import HeroImage from "@components/HeroImage.astro";
+import Description from "@components/Description.astro";
+import Table from "@components/Table.astro";
+import TableRow from "@components/TableRow.astro";
+import PlatformLink from "@components/PlatformLink.astro";
 
-import DescriptionPicture from '@components/DescriptionPicture.astro';
+import DescriptionPicture from "@components/DescriptionPicture.astro";
 
-import image1 from '@assets/games/cs2/picture1.jpg';
-import image2 from '@assets/games/cs2/picture2.jpg';
+import image1 from "@assets/games/helldivers2/picture1.jpg";
+import image2 from "@assets/games/helldivers2/picture2.jpg";
+import image3 from "@assets/games/helldivers2/picture3.jpg";
 ---
 
 <style>
@@ -22,12 +23,12 @@ import image2 from '@assets/games/cs2/picture2.jpg';
   title="Gummientchen - Helldivers 2"
   description="Join Gummientchen on a gaming odyssey like no other. From dominating battlefields to unraveling epic quests, Gummientchen explores pixel realms, leaving no virtual stone unturned."
   heading="Helldivers 2"
-  subheading="So many microticks, there's sometimes none at all!"
+  subheading="Bringing democracy to the universe!"
   minimal="true"
 >
   <HeroImage svg="helldivers2" fill="true" />
   <Table title="My Stats">
-    <TableRow component="Playtime">98 hours (30.10.2023)</TableRow>
+    <TableRow component="Playtime">14 hours (01.03.2024)</TableRow>
     <TableRow component="Platform">Steam</TableRow>
     <TableRow component="Playing with">
       <PlatformLink
@@ -36,137 +37,148 @@ import image2 from '@assets/games/cs2/picture2.jpg';
         iconname="steam"
       /> /
       <PlatformLink
-        linktext="lwt2"
-        linkhref="https://steamcommunity.com/id/lwt2"
-        iconname="steam"
-      /> /
-      <PlatformLink
-        linktext="Eas"
-        linkhref="https://steamcommunity.com/id/Eas_"
-        iconname="steam"
-      />
-      <br />
-      <PlatformLink
         linktext="Ruvebo"
         linkhref="https://steamcommunity.com/id/Ruvebo"
         iconname="steam"
       /> /
+      <br />
       <PlatformLink
-        linktext="Raron"
-        linkhref="https://steamcommunity.com/id/raron1"
+        linktext="Damhaet"
+        linkhref="https://steamcommunity.com/id/damhaet"
         iconname="steam"
-      />
+      /> /
       <PlatformLink
-        linktext="cloud"
-        linkhref="https://steamcommunity.com/id/cloud361"
+        linktext="Leberschnitzel"
+        linkhref="https://steamcommunity.com/id/leberschnitzel"
+        iconname="steam"
+      /> /
+      <br />
+      <PlatformLink
+        linktext="NeVsLeHcIm"
+        linkhref="https://steamcommunity.com/id/NeVsLeHcIm"
         iconname="steam"
       />
     </TableRow>
   </Table>
   <Description>
     <p>
-      Counter-Strike 2 is the long-awaited sequel to one of the most popular and
-      influential first-person shooters of all time. Built on the Source 2
-      engine, CS2 brings the classic gameplay of Counter-Strike to a new
-      generation, with stunning visuals, improved performance, and new features
-      that make it the most competitive and exciting Counter-Strike experience
-      yet.
+      Hey there, fellow Helldivers! Gummientchen here, reporting for duty and
+      ready to bring a little splash of fun into this galaxy-saving business. If
+      you're wondering what in the cosmos a rubber ducky is doing in the brutal
+      world of Helldivers 2, well...buckle up, because it's about to get a
+      little bit ridiculous.
     </p>
 
+    <h3>Diving into Helldivers 2</h3>
+
     <p>
-      Source 2 is a powerful new engine that allows Valve to create more
-      realistic and immersive worlds than ever before. In CS2, this means that
-      you'll experience everything from the dust kicked up by your footsteps to
-      the smoke billowing from a grenade explosion with incredible realism.
+      So, about the game itself. If you've never donned a Helldiver uniform,
+      you're missing out on a wild interstellar ride! Helldivers 2 is pure
+      chaotic co-op at its finest. Up to four players team up to liberate
+      planets, blow things up with gloriously over-the-top firepower, and
+      accidentally (well, maybe sometimes not-so-accidentally) pulverize their
+      teammates with friendly fire. Yeah, it gets messy, but that's half the
+      fun.
     </p>
 
     <DescriptionPicture
       src={image1}
-      alt="Five players lined up, ready to battle. Valve©"
+      alt="Helldiver fighting against a flamewthrowing mech. Arrowhead Game Studios©"
     />
 
     <p>
-      CS2 also introduces a number of new features that make the game more
-      competitive and exciting. For example, there's a new ranking system that
-      more accurately reflects your skill level, as well as a new tickless
-      server architecture that reduces lag and makes the game more responsive.
+      Picture this: You're helldiving down under a rain of alien fire, trusty
+      quacking ducky tucked in your utility belt. A monstrous Bug Tank is
+      looming ahead, comrades are screaming for backup... and there I am, yours
+      truly, dropping in with a well-timed airstrike right on its exoskeleton!
+      Sure, occasionally I might call in that airstrike a little too close for
+      comfort, but hey, no risk, no reward, right?
+    </p>
+
+    <h3>Gear Up and Get Quacking</h3>
+
+    <p>
+      Helldivers 2 is all about ridiculous weapons, strategic depth, and moments
+      where everything goes hilariously wrong. You've got your standard-issue
+      machine guns, your grenade launchers, your anti-tank railguns...oh, and
+      did I mention the flamethrowers? Because nothing quite says "Welcome to
+      Super-Earth" like setting a swarm of Bugs ablaze.
     </p>
 
     <p>
-      At its core, CS2 is still the same classic Counter-Strike experience that
-      fans have come to love. You'll still play as either a Counter-Terrorist or
-      Terrorist, and you'll still be tasked with completing different objectives
-      depending on the game mode. But with its new features and improved
-      performance, CS2 is the best way to experience Counter-Strike yet.
+      Beyond the firepower, this game is a master of escalation. Start a
+      mission, and you might think it's a simple recon op. Fifteen minutes
+      later, you're knee-deep in alien guts and calling down orbital strikes.
+      It's beautiful mayhem tailored perfectly for those nights when you want to
+      blast away some stress.
     </p>
 
     <DescriptionPicture
       src={image2}
-      alt="Image of a player engaged in a combat situation on the 'Inferno' map. The player is positioned in the 'Banana' area, using barrels as cover while shooting at an opponent. Valve©"
+      alt="Helldivers protecting a nuke from bugs. Arrowhead Game Studios©"
     />
 
+    <h3>Join the Quack Squad</h3>
+
     <p>
-      The Source 2 engine is a major upgrade over the original Source engine
-      that was used to develop Counter-Strike: Global Offensive. It features a
-      number of new features and improvements, including:
+      Now, I'm not gonna lie to you - being a Helldiver ain't easy. It's messy,
+      it's dangerous, and sometimes your fellow troopers are more hazardous than
+      the aliens. But that's where the true fun lies. Find yourself a crew of
+      like-minded ducks (or perhaps some penguins, or maybe even a slightly
+      unhinged space otter), and those frantic, explosive missions become pure
+      comedic gold.
     </p>
 
-    <ul>
-      <li>
-        Volumetric effects: This allows for more realistic smoke, fog, and other
-        effects.
-      </li>
-      <li>
-        New ranking system: The new ranking system is more accurate and reflects
-        your skill level more precisely. This helps to ensure that you are
-        matched against opponents of a similar skill level, which makes for more
-        competitive and enjoyable matches.
-      </li>
-      <li>
-        New tickless server architecture: The new tickless server architecture
-        reduces lag and makes the game more responsive. This is especially
-        important in online matches, where even a small amount of lag can make
-        the difference between winning and losing.
-      </li>
-      <li>
-        New game modes: CS2 will introduce a number of new game modes, including
-        a new competitive mode that is designed to be even more challenging and
-        rewarding than the existing competitive mode in CS:GO.
-      </li>
-    </ul>
+    <p>
+      Communication is key, teamwork is essential, and a healthy dose of
+      "whoops, sorry about that" never hurts. Because even when you blow up your
+      friend for the fifth time, it's all in the spirit of good, clean,
+      democracy-spreading fun.
+    </p>
+
+    <DescriptionPicture
+      src={image3}
+      alt="Helldivers fighting against a big bug alien. Arrowhead Game Studios©"
+    />
+
+    <h3>Don't Duck Out on the Challenge</h3>
 
     <p>
-      At its core, CS2 is still the same classic Counter-Strike experience that
-      fans have come to love. You'll still play as either a Counter-Terrorist or
-      Terrorist, and you'll still be tasked with completing different objectives
-      depending on the game mode. However, the new features in CS2 make it the
-      best way to experience Counter-Strike yet.
+      Helldivers 2 gets hard. I mean, galaxy-scale-invasion-hard. The alien
+      hordes don't mess around. The good news is, that's where you and your crew
+      come in. Progressing in this game means becoming a well-oiled,
+      alien-squashing machine. It means coordinating your loadouts, mastering
+      your stratagems, and learning to prioritize saving each other's feathered
+      butts just as much as exterminating alien ones.
+    </p>
+
+    <h3>So, Ready to Take a Dive?</h3>
+
+    <p>
+      If you're looking for a shooter that embraces chaos, rewards teamwork, and
+      lets you be the slightly-crazed-but-lovable rubber ducky in an elite
+      squadron, then suit up, soldier! Helldivers 2 is the place to be. Let's
+      bring democracy to the galaxy, one exploding alien (and maybe a few
+      accidentally squished teammates) at a time.
     </p>
   </Description>
   <Table title="Information about the Game">
-    <TableRow component="Developer">Valve</TableRow>
-    <TableRow component="Publisher">Valve</TableRow>
-    <TableRow component="Release Date">27.09.2023</TableRow>
+    <TableRow component="Developer">Arrowhead Game Studios</TableRow>
+    <TableRow component="Publisher">PlayStation PC LLC</TableRow>
+    <TableRow component="Release Date">08.02.2024</TableRow>
     <TableRow component="Genre">Tactical first-person shooter</TableRow>
-    <TableRow component="Official Website">
-      <PlatformLink
-        linktext="counter-strike.net"
-        linkhref="https://www.counter-strike.net/"
-        iconname=""
-      />
-    </TableRow>
     <TableRow component="Steam Store Page">
       <PlatformLink
-        linktext="Counter-Strike 2"
-        linkhref="https://store.steampowered.com/app/730/CounterStrike_2/"
+        linktext="HELLDIVERS™ 2"
+        linkhref="https://store.steampowered.com/app/553850/HELLDIVERS_2/"
         iconname="steam"
       />
     </TableRow>
-    <TableRow component="Leetify Profile">
+    <TableRow component="Playstation Store Page">
       <PlatformLink
-        linktext="Leetify: Gummientchen"
-        linkhref="https://leetify.com/public/profile/76561197987542343"
-        iconname=""
+        linktext="Helldivers™ 2"
+        linkhref="https://www.playstation.com/de-ch/games/helldivers-2/"
+        iconname="playstation"
       />
     </TableRow>
   </Table>
