--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -4,7 +4,7 @@ export interface Props {
   gamertag?: string;
   description?: string;
   svg: string;
-  svgbackground: string;
+  svgbackground?: string;
   buttonhref?: string;
   buttonsuffix?: string;
   buttontarget?: string;
