--- a/src/pages/games/helldivers2.astro
+++ b/src/pages/games/helldivers2.astro
@@ -166,7 +166,7 @@ import image3 from "@assets/games/helldivers2/picture3.jpg";
     <TableRow component="Developer">Arrowhead Game Studios</TableRow>
     <TableRow component="Publisher">PlayStation PC LLC</TableRow>
     <TableRow component="Release Date">08.02.2024</TableRow>
-    <TableRow component="Genre">Tactical first-person shooter</TableRow>
+    <TableRow component="Genre">Third-person shooter</TableRow>
     <TableRow component="Steam Store Page">
       <PlatformLink
         linktext="HELLDIVERS™ 2"
