added audio hardware to rig section
added audio interface, microphone and headphones

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '@layouts/Layout.astro';
-import SectionGrid from '@components/SectionGrid.astro';
-import Table from '@components/Table.astro';
-import TableRow from '@components/TableRow.astro';
-import Card from '@components/Card.astro';
+import Layout from "@layouts/Layout.astro";
+import SectionGrid from "@components/SectionGrid.astro";
+import Table from "@components/Table.astro";
+import TableRow from "@components/TableRow.astro";
+import Card from "@components/Card.astro";
 ---
 
 <Layout
@@ -227,5 +227,10 @@ import Card from '@components/Card.astro';
       Logitech - G Pro X Superlight Wireless
     </TableRow>
     <TableRow component="Keyboard">Ducky - One 2 (MX Blue)</TableRow>
+    <TableRow component="Audio Interface">RØDE - Rodecaster Duo</TableRow>
+    <TableRow component="Microphone">Audio-Technica - AT2035</TableRow>
+    <TableRow component="Headphones">
+      Audio-Technica - ATH-M40x with ZMF Cowhide Earpads
+    </TableRow>
   </Table>
 </Layout>
