--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,5 @@
 ---
+
 ---
 
 <footer>
@@ -18,7 +19,8 @@
   footer {
     color: var(--color-gray-300);
     font-weight: 300;
-    padding: 0 2em 2em;
+    padding-block: 2em;
+    padding-inline: 1em;
   }
   footer a {
     text-decoration: none;
@@ -26,7 +28,7 @@
 
   @media (min-width: 66em) {
     footer {
-      padding: 0;
+      padding-inline: 0;
       grid-column: 2 / span 1;
     }
   }
