--- a/src/components/Table.astro
+++ b/src/components/Table.astro
@@ -4,8 +4,8 @@ export interface Props {
   href?: string;
 }
 
-const { title = "Rig", href = false } = Astro.props;
-const { default: arrow } = await import("../images/arrow-right.svg?raw");
+const { title = 'Rig', href = false } = Astro.props;
+const { default: arrow } = await import('../images/arrow-right.svg?raw');
 ---
 
 <section>
@@ -65,7 +65,7 @@ const { default: arrow } = await import("../images/arrow-right.svg?raw");
       grid-column: 1 / span 3;
       display: grid;
       grid-template-columns: 1fr 50rem 1fr;
-      padding: 0;
+      padding-inline: 0;
       z-index: 1;
     }
     section div {
