--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,16 +1,17 @@
 ---
-import { ViewTransitions } from "astro:transitions";
+import { ViewTransitions } from 'astro:transitions';
 
-import "@styles/main.css";
+import '@styles/main.css';
 
-import Header from "@components/Header.astro";
-import Footer from "@components/Footer.astro";
+import Header from '@components/Header.astro';
+import MainMenu from '@components/MainMenu.astro';
+import Footer from '@components/Footer.astro';
 
-const appleTouchIconUrl = new URL("/apple-touch-icon.png", Astro.url);
-const favicon32Url = new URL("/favicon-32x32.png", Astro.url);
-const favicon16Url = new URL("/favicon-16x16.png", Astro.url);
-const manifestUrl = new URL("/manifest.json", Astro.url);
-const maskIconUrl = new URL("/safari-pinned-tab.svg", Astro.url);
+const appleTouchIconUrl = new URL('/apple-touch-icon.png', Astro.url);
+const favicon32Url = new URL('/favicon-32x32.png', Astro.url);
+const favicon16Url = new URL('/favicon-16x16.png', Astro.url);
+const manifestUrl = new URL('/manifest.json', Astro.url);
+const maskIconUrl = new URL('/safari-pinned-tab.svg', Astro.url);
 
 export interface Props {
   title: string;
@@ -23,7 +24,7 @@ export interface Props {
 const { title, description, heading, subheading, minimal } = Astro.props;
 ---
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -46,7 +47,8 @@ const { title, description, heading, subheading, minimal } = Astro.props;
     <ViewTransitions />
   </head>
   <body>
-    <div class="container">
+    <div class="container" id="home">
+      <MainMenu />
       <Header
         heading={heading}
         subheading={subheading}
@@ -58,16 +60,16 @@ const { title, description, heading, subheading, minimal } = Astro.props;
     </div>
     <script>
       window.addEventListener(
-        "scroll",
+        'scroll',
         () => {
           var percentage =
-            window.pageYOffset / document.querySelector("header").offsetHeight;
+            window.pageYOffset / document.querySelector('header').offsetHeight;
 
           if (percentage > 0.99999) {
             percentage = 0.99999;
           }
 
-          document.body.style.setProperty("--scroll", percentage);
+          document.body.style.setProperty('--scroll', percentage);
         },
         false
       );
