--- a/src/components/SectionGrid.astro
+++ b/src/components/SectionGrid.astro
@@ -30,11 +30,10 @@ const { title, id } = Astro.props;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   }
   section h2 {
-    color: var(--color-gray-100);
-    font-size: 34px;
+    color: var(--color-gray-600);
+    font-size: 243px;
     font-weight: 600;
-    line-height: 45px;
-    margin-top: 0;
+    margin-block: 0;
   }
 
   @media (min-width: 66rem) {
