--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,4 +1,6 @@
 ---
+import CardSvg from "@components/CardSvg.astro";
+import CardRaster from "@components/CardRaster.astro";
 export interface Props {
   service: string;
   gamertag?: string;
@@ -9,6 +11,7 @@ export interface Props {
   buttonsuffix?: string;
   buttontarget?: string;
   buttonrel?: string;
+  filetype?: string;
 }
 
 const {
@@ -21,21 +24,36 @@ const {
   buttonsuffix = "Profile",
   buttontarget = "_self",
   buttonrel = "noopener",
+  filetype = "svg",
 } = Astro.props;
 
-// import fs from 'node:fs/promises';
-
-// const url = new URL(`${svg}`, import.meta.url);
-// const svgtext = await fs.readFile(url, 'utf-8');
-
-const { default: svgtext } = await import(`../images/${svg}.svg?raw`);
 const { default: arrow } = await import("../images/arrow-right.svg?raw");
 
-const svgbackgroundcss = "background-color:" + svgbackground;
+const filetypes = [filetype];
+const isSvg = filetypes.filter((item) => item === "svg");
+const isPng = filetypes.filter((item) => item === "png");
+const isWebp = filetypes.filter((item) => item === "webp");
+const isAvif = filetypes.filter((item) => item === "avif");
 ---
 
 <div class="card">
-  <div style={svgbackgroundcss} set:html={svgtext} transition:name={svg} />
+  {isSvg.map((item) => <CardSvg svg={svg} svgbackground={svgbackground} />)}
+  {
+    isPng.map((item) => (
+      <CardRaster src={svg} svgbackground={svgbackground} filetype={filetype} />
+    ))
+  }
+  {
+    isWebp.map((item) => (
+      <CardRaster src={svg} svgbackground={svgbackground} filetype={filetype} />
+    ))
+  }
+  {
+    isAvif.map((item) => (
+      <CardRaster src={svg} svgbackground={svgbackground} filetype={filetype} />
+    ))
+  }
+
   <h2>
     {service}{gamertag && <span>: {gamertag}</span>}
   </h2>
@@ -56,10 +74,14 @@ const svgbackgroundcss = "background-color:" + svgbackground;
   .card {
     background: var(--color-gray-700);
     color: var(--color-gray-100);
-    -webkit-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
-      0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
-      0 3px 3px -2px rgba(0, 0, 0, 0.2), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
+    -webkit-box-shadow:
+      0 3px 4px 0 rgba(0, 0, 0, 0.14),
+      0 3px 3px -2px rgba(0, 0, 0, 0.2),
+      0 1px 8px 0 rgba(0, 0, 0, 0.12);
+    box-shadow:
+      0 3px 4px 0 rgba(0, 0, 0, 0.14),
+      0 3px 3px -2px rgba(0, 0, 0, 0.2),
+      0 1px 8px 0 rgba(0, 0, 0, 0.12);
     border-radius: 2px;
     overflow: hidden;
     position: relative;
@@ -78,11 +100,5 @@ const svgbackgroundcss = "background-color:" + svgbackground;
     position: absolute;
     bottom: 0;
     left: 0;
-  }
-
-  .card div {
-    padding: 0;
-    margin: 0;
-    line-height: 0;
   }
 </style>
