added satisfactory game

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -70,11 +70,11 @@ import Card from "@components/Card.astro";
 
   <SectionGrid title="Games">
     <!-- <Card
-      service="CSGO"
-      description="Bomb has been planted"
-      svg="csgo"
-      buttonhref="games/csgo"
-      buttonsuffix="More Info"
+    service="CSGO"
+    description="Bomb has been planted"
+    svg="csgo"
+    buttonhref="games/csgo"
+    buttonsuffix="More Info"
     /> -->
     <Card
       service="CS2"
@@ -89,6 +89,15 @@ import Card from "@components/Card.astro";
       svg="factorio"
       buttonhref="games/factorio"
       buttonsuffix="More Info"
+    />
+    <Card
+      service="Satisfactory"
+      description="For Super Earth!"
+      svg="satisfactory"
+      filetype="webp"
+      buttonhref="games/satisfactory"
+      buttonsuffix="More Info"
+      svgbackground="#e48c27"
     />
     <Card
       service="Farming Simulator 22"
