fixed wrong description for satisfactory

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ import Card from "@components/Card.astro";
     />
     <Card
       service="Satisfactory"
-      description="For Super Earth!"
+      description="I Can't Believe It's Not Factorio!"
       svg="satisfactory"
       filetype="webp"
       buttonhref="games/satisfactory"
