added aspect ratio to satisfactory and improved icon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -141,13 +141,13 @@ import Card from "@components/Card.astro";
       buttonhref="games/ksp"
       buttonsuffix="Info"
     />
-    <Card
+    <!-- <Card
       service="Overwatch 2"
       description="Who needs aim anyway?"
       svg="overwatch2"
       buttonhref="games/overwatch2"
       buttonsuffix="More Info"
-    />
+    /> -->
     <Card
       service="Helldivers 2"
       description="For Super Earth!"
